# RemindersTasks

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  wait_for_db.py
app/bot/: ui.py
app/bot/handlers/: __init__.py  categories.py  common.py  reminders.py  tasks.py
app/bot/keyboards/: common.py
app/db/: base.py  session.py
app/db/models/: __init__.py  category.py  reminder.py  task.py  user.py
app/db/repositories/: categories.py  reminders.py  tasks.py  users.py
app/schemas/: __init__.py  base.py  categories.py  reminders.py  tasks.py  users.py
app/services/: datetime_parser.py  recurrence.py  scheduler.py
app/vk/: client.py  handlers.py  keyboards.py  main.py  scheduler.py
docs/: TECHNICAL_SPEC.md
migrations/: env.py
migrations/versions/: 20260612_0001_initial.py  20260612_0002_add_vk_users.py
