[project]
name = "reminders-tasks-bot"
version = "0.1.0"
description = "Telegram bot for personal reminders and task dashboard"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.8,<4.0",
    "SQLAlchemy>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.16,<2.0",
    "pydantic-settings>=2.3,<3.0",
    "python-dateutil>=2.9,<3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]
